--- a/ajaxconcepts.html
+++ b/ajaxconcepts.html
@@ -11,4 +11,22 @@
     <input type="text" id="firstName">
     <div>
         <label for="lastName">Enter Last Name:</label>
-        <input typ
+        <input type="text" id="lastName">
+    </div>
+    <div>
+        <label for="major">Enter Major:</label>
+        <input type="text" id="major">
+    </div>
+    <br>
+    <div>
+        <label for="courseNumbers">Couse List:</label>
+        <ul id="courseNumbers">
+        </ul>
+    </div>
+    <div>
+        <button id="load-button">Click to load</button>
+        
+    </div>
+    <div id="results"></div>
+</body>
+</html>
